--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background-image:url('assets/img/profile-img.jpg');
+  background-image:url('assets/img/profile-img.jpeg');
   background-size: cover;
 }
 
