--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,7 +205,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background-image:url('../img/profile-img.jpeg');
+  background-image:url('../img/profile-img.jpg');
   background-size: cover;
 }
 
