--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 9997;
   transition: all 0.5s;
   padding: 0 15px;
-  background: #149DDD;
+  background: #040b14;
   overflow-y: auto;
 }
 
